--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 spring.application.name=inventory-failover
 server.port=8083
+
+eureka.client.service-url.defaultZone=http://netflix:eureka@localhost:8761/eureka
